# discrete-math-2026-logic-library

./: .gitignore  README.md
benchmark/: .gitignore  CMakeLists.txt  README.md  run_benchmark.sh  run_test.py
benchmark/source/: legacy.cpp  simd_avx2_omp_parallel.cpp  simd_avx512_omp_parallel.cpp  simd_ord_fill.cpp
benchmark/test_results/run_20260324_235206/: benchmark_results.csv
benchmark/utility/: benchmark_runner.cc  generator.cc  generator.h
